# PasteShare

./: .env  .replit  ai_forecasting.py  ai_reports.py  ai_routes.py  alter_users_table.py  auth.py  branch_utils.py  credit_management.py  credit_routes.py  daily_checklist.py  db.py  insert_test_users.py  main.py  migrate_subscriptions_planid.py  models.py  notifications.py  purchase_orders.py  pyproject.toml  requirements.txt  routes.py  subscription.py  suppliers.py  totalizer.py
attached_assets/: Pasted--Module-Target-Strategy-Incentive-Engine-Python-Template-This-is-structured-to-Upload-last--1744862505268.txt  Pasted-1-Sales-Insights-Forecasting-Input-Daily-fuel-sales-data-shift-wise-data-AI-Output-Sales-t-1744468814481.txt  Pasted-Here-s-a-clear-and-structured-diagram-showcasing-who-gets-what-access-for-your-Petrol-Pump-Manag-1744865851310.txt  Pasted-Here-s-a-clear-and-structured-login-flow-diagram-for-your-Petrol-Pump-Management-App--1744864799941.txt  Pasted-Perfect-Since-you-want-to-use-Replit-as-the-complete-backend-API-Database-Hosting-for-P-1744451134577.txt  Pasted-Perfect-You-re-envisioning-a-smart-Target-Incentive-Management-Module-a-core-differentiato-1744862466875.txt
data/: branches.json  subscriptions.json
migrations/: 001_create_branches_table.sql
routers/: __init__.py  branch.py  fuel.py  products.py  purchase.py  reports.py  sales.py  staff.py
templates/: add_credit_customer.html  add_credit_transaction.html  add_daily_checklist.html  add_supplier.html  add_tank.html  add_totalizer_reading.html  admin.html  admin_notifications.html  fuel.html  (+46 more)
(+2 files in other folders)
